--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-Hey HFT! 😁
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Lavleen Agrawal ~ Links</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4/css/font-awesome.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
+    <style>
+      body {font-family: 'Work Sans', sans-serif;}
+      h1, h2, h3 {font-weight: 300; text-align: center; font-size: 18pt; margin: 0; padding: 15px; line-height: 1; text-shadow: 0 0 2px rgba(0, 0, 0, 0.5);}
+      h2 {padding: 0; font-size: 14pt; text-shadow: 0 0 1px rgba(0, 0, 0, 0.75);}
+      h3 {font-size: 12pt; text-shadow: 0 0 1px rgba(0, 0, 0, 0.5);}
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-8 offset-md-2">
+          <img src="https://i.imgur.com/zK96wlh.png" width="100" class="img-thumbnail rounded-circle mx-auto mt-4 d-block" alt="Lavleen Agrawal" />
+          <h1>Lavleen Agrawal</h1>
+          <h2>My List of Resources</h2>
+          <div class="list-group my-3 pt-5 text-center">
+            <h3 class="list-group-item m-0 bg-light">Personal Stuff</h3>
+            <a href="https://fb.me/" class="list-group-item list-group-item-action"><i class="fa fa-facebook-square"></i> Facebook Me</a>
+            <a href="https://twitter.com/" class="list-group-item list-group-item-action"><i class="fa fa-twitter-square"></i> Tweet to Me</a>
+            <a href="mailto:lavleen@google.com" class="list-group-item list-group-item-action"><i class="fa fa-envelope-square"></i> Email Me</a>
+            <h3 class="list-group-item m-0 bg-light">Professional Stuff</h3>
+            <a href="https://linkedin.com/" class="list-group-item list-group-item-action"><i class="fa fa-linkedin-square"></i> Connect on LinkedIn</a>
+            <h3 class="list-group-item m-0 bg-light">My Learning</h3>
+            <a href="https://rb.gy/fupw21" class="list-group-item list-group-item-action"><i class="fa fa-youtube-square"></i> Praveen's YouTube Channel</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
