--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
     <style>
-      body {font-family: 'Work Sans', sans-serif;}
+      body {font-family: 'Work Sans', sans-serif; background-color: #333; color: #fff;}
       h1, h2, h3 {font-weight: 300; text-align: center; font-size: 18pt; margin: 0; padding: 15px; line-height: 1; text-shadow: 0 0 2px rgba(0, 0, 0, 0.5);}
       h2 {padding: 0; font-size: 14pt; text-shadow: 0 0 1px rgba(0, 0, 0, 0.75);}
-      h3 {font-size: 12pt; text-shadow: 0 0 1px rgba(0, 0, 0, 0.5);}
+      h3 {font-size: 10pt; text-shadow: 0 0 1px rgba(0, 0, 0, 0.5); color: #666; text-transform: uppercase;}
     </style>
   </head>
   <body>
