Added short-cut icons & open graph.
Also optimised the image.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
+    <link rel="shortcut icon" type="image/png" href="https://i.imgur.com/zK96wlhl.png" />
+    <meta name="description" content="This is a website where I post my important links." />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Lavleen Agrawal" />
+    <meta property="og:url" content="https://hft.jigg.win/" />
+    <meta property="og:image" content="https://i.imgur.com/zK96wlhl.png" />
+    <meta property="og:description" content="This is a website where I post my important links." />
     <style>
       body {font-family: 'Work Sans', sans-serif; background-color: #333; color: #fff;}
       h1, h2, h3 {font-weight: 300; text-align: center; font-size: 18pt; margin: 0; padding: 15px; line-height: 1; text-shadow: 0 0 2px rgba(0, 0, 0, 0.5);}
@@ -20,7 +28,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-8 offset-md-2">
-          <img src="https://i.imgur.com/zK96wlh.png" width="100" class="img-thumbnail rounded-circle mx-auto mt-4 d-block" alt="Lavleen Agrawal" />
+          <img src="https://i.imgur.com/zK96wlhl.png" width="100" class="img-thumbnail rounded-circle mx-auto mt-4 d-block" alt="Lavleen Agrawal" />
           <h1>Lavleen Agrawal</h1>
           <h2>My List of Resources</h2>
           <div class="list-group my-3 pt-5 text-center">
