Updated to Pikachu.

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Lavleen Agrawal ~ Links</title>
+    <title>Pikachu ~ Links</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4/css/font-awesome.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
-    <link rel="shortcut icon" type="image/png" href="https://i.imgur.com/zK96wlhl.png" />
+    <link rel="shortcut icon" type="image/png" href="https://i.imgur.com/3uEyHgdl.png?https://imgur.com/a/soqZjKU" />
     <meta name="description" content="This is a website where I post my important links." />
     <meta name="robots" content="index, follow" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Lavleen Agrawal" />
+    <meta property="og:title" content="Pikachu" />
     <meta property="og:url" content="https://hft.jigg.win/" />
-    <meta property="og:image" content="https://i.imgur.com/zK96wlhl.png" />
+    <meta property="og:image" content="https://i.imgur.com/3uEyHgdl.png?https://imgur.com/a/soqZjKU" />
     <meta property="og:description" content="This is a website where I post my important links." />
     <style>
       body {font-family: 'Work Sans', sans-serif; background-color: #333; color: #fff;}
@@ -28,14 +28,14 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-8 offset-md-2">
-          <img src="https://i.imgur.com/zK96wlhl.png" width="100" class="img-thumbnail rounded-circle mx-auto mt-4 d-block" alt="Lavleen Agrawal" />
-          <h1>Lavleen Agrawal</h1>
+          <img src="https://i.imgur.com/3uEyHgdl.png?https://imgur.com/a/soqZjKU" width="100" class="img-thumbnail rounded-circle mx-auto mt-4 d-block" alt="Pikachu" />
+          <h1>Pikachu</h1>
           <h2>My List of Resources</h2>
           <div class="list-group my-3 pt-5 text-center">
             <h3 class="list-group-item m-0 bg-light">Personal Stuff</h3>
             <a href="https://fb.me/" class="list-group-item list-group-item-action"><i class="fa fa-facebook-square"></i> Facebook Me</a>
             <a href="https://twitter.com/" class="list-group-item list-group-item-action"><i class="fa fa-twitter-square"></i> Tweet to Me</a>
-            <a href="mailto:lavleen@google.com" class="list-group-item list-group-item-action"><i class="fa fa-envelope-square"></i> Email Me</a>
+            <a href="mailto:pikachu@pokemon.com" class="list-group-item list-group-item-action"><i class="fa fa-envelope-square"></i> Email Me</a>
             <h3 class="list-group-item m-0 bg-light">Professional Stuff</h3>
             <a href="https://linkedin.com/" class="list-group-item list-group-item-action"><i class="fa fa-linkedin-square"></i> Connect on LinkedIn</a>
             <h3 class="list-group-item m-0 bg-light">My Learning</h3>
