Fixed the spacing around Meta.
Fixes #1.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-8 offset-md-2">
-          <img src="https://i.imgur.com/3uEyHgdl.png?https://imgur.com/a/soqZjKU" width="100" class="img-thumbnail rounded-circle mx-auto mt-4 d-block" alt="Pikachu" />
+          <img src="https://i.imgur.com/3uEyHgdl.png?https://imgur.com/a/soqZjKU" width="100" class="img-thumbnail rounded-circle mx-auto mt-5 d-block" alt="Pikachu" />
           <h1>Pikachu</h1>
           <h2>My List of Resources</h2>
-          <div class="list-group my-3 pt-5 text-center">
+          <div class="list-group my-5 text-center">
             <h3 class="list-group-item m-0 bg-light">Personal Stuff</h3>
             <a href="https://fb.me/" class="list-group-item list-group-item-action"><i class="fa fa-facebook-square"></i> Facebook Me</a>
             <a href="https://twitter.com/" class="list-group-item list-group-item-action"><i class="fa fa-twitter-square"></i> Tweet to Me</a>
